--- a/references.bib
+++ b/references.bib
@@ -186,6 +186,22 @@
   file = {/Users/jinko/Zotero/storage/27SQPA87/Flores-Mireles et al. - 2015 - Urinary tract infections epidemiology, mechanisms of infection and treatment options.pdf}
 }
 
+@article{folsomPhysiologicalProteomicAnalysis2014,
+  title = {Physiological and {{Proteomic Analysis}} of {{Escherichia}} Coli {{Iron-Limited Chemostat Growth}}},
+  author = {Folsom, James Patrick and Parker, Albert E. and Carlson, Ross P.},
+  year = 2014,
+  month = jul,
+  journal = {Journal of Bacteriology},
+  volume = {196},
+  number = {15},
+  pages = {2748--2761},
+  publisher = {American Society for Microbiology},
+  doi = {10.1128/jb.01606-14},
+  urldate = {2025-11-03},
+  abstract = {Iron bioavailability is a major limiter of bacterial growth in mammalian host tissue and thus represents an important area of study. Escherichia coli K-12 metabolism was studied at four levels of iron limitation in chemostats using physiological and proteomic analyses. The data documented an E. coli acclimation gradient where progressively more severe iron scarcity resulted in a larger percentage of substrate carbon being directed into an overflow metabolism accompanied by a decrease in biomass yield on glucose. Acetate was the primary secreted organic by-product for moderate levels of iron limitation, but as stress increased, the metabolism shifted to secrete primarily lactate ({$\sim$}70\% of catabolized glucose carbon). Proteomic analysis reinforced the physiological data and quantified relative increases in glycolysis enzyme abundance and decreases in tricarboxylic acid (TCA) cycle enzyme abundance with increasing iron limitation stress. The combined data indicated that E. coli responds to limiting iron by investing the scarce resource in essential enzymes, at the cost of catabolic efficiency (i.e., downregulating high-ATP-yielding pathways containing enzymes with large iron requirements, like the TCA cycle). Acclimation to iron-limited growth was contrasted experimentally with acclimation to glucose-limited growth to identify both general and nutrient-specific acclimation strategies. While the iron-limited cultures maximized biomass yields on iron and increased expression of iron acquisition strategies, the glucose-limited cultures maximized biomass yields on glucose and increased expression of carbon acquisition strategies. This study quantified ecologically competitive acclimations to nutrient limitations, yielding knowledge essential for understanding medically relevant bacterial responses to host and to developing intervention strategies.},
+  file = {/Users/jinko/Zotero/storage/RVLYFHP2/Folsom et al. - 2014 - Physiological and Proteomic Analysis of Escherichia coli Iron-Limited Chemostat Growth.pdf}
+}
+
 @misc{frick-chengAlteredMotilityResponse2023,
   title = {Altered Motility in Response to Iron-Limitation Is Regulated by {{lpdA}} in Uropathogenic {{E}}. Coli {{CFT073}}},
   author = {{Frick-Cheng}, A. E. and Shea, A. E. and Roberts, J. R. and Smith, S. N. and Ohi, M. D. and Mobley, H. L. T.},
@@ -199,7 +215,7 @@
   abstract = {More than half of all women will experience a urinary tract infection (UTI) in their lifetime with most cases caused by uropathogenic Escherichia coli (UPEC). Bacterial motility enhances UPEC pathogenicity, resulting in more severe disease outcomes including kidney infection. Surprisingly, the connection between motility and iron limitation is mostly unexplored, despite the lack of free iron available in the host. Therefore, we sought to explore the potential connection between iron restriction and regulation of motility in UPEC. We cultured E. coli CFT073, a prototypical UPEC strain, in media containing an iron chelator. Under iron limitation, CFT073 had elevated fliC (flagella) promoter activity, driving motility on the leading edge of the colony. Furthermore, this iron-specific response was repressed by the addition of exogenous iron. We confirmed increased flagella expression in CFT073 by measuring fliC transcript, FliC protein, and surface-expressed flagella under iron-limited conditions. To define the regulatory mechanism, we constructed single knockouts of eight master regulators. The iron-regulated response was lost in crp, arcA, and fis mutants. Thus, we focused on the five genes regulated by all three transcription factors. Of the five genes knocked out, the iron-regulated motility response was most strongly dysregulated in an lpdA mutant, which also resulted in significantly lowered fitness in the murine model of ascending UTI. Collectively, we demonstrated that iron-mediated motility in CFT073 is regulated by lpdA, which contributes to the understanding of how uropathogens differentially regulate motility mechanisms in the iron-restricted host. Importance Urinary tract infections (UTIs) are ubiquitous and responsible for over five billion dollars in associated health care costs annually. Both iron acquisition and motility are highly studied virulence factors associated with uropathogenic E. coli (UPEC), the main causative agent of uncomplicated UTI. This work is innovative by providing mechanistic insight into the synergistic relationship between these two critical virulence properties. Here, we demonstrate that iron limitation has pleiotropic effects with consequences that extend beyond metabolism, and impact other virulence mechanisms. Indeed, targeting iron acquisition as a therapy may lead to an undesirable enhancement of UPEC pathogenesis through increased motility. It is vital to understand the full breadth of UPEC pathogenesis to adequately respond to this common infection, especially with the increase of antibiotic resistant pathogens.},
   archiveprefix = {bioRxiv},
   chapter = {New Results},
-  copyright = {{\copyright} 2023, Posted by Cold Spring Harbor Laboratory. The copyright holder for this pre-print is the author. All rights reserved. The material may not be redistributed, re-used or adapted without the author's permission.},
+  copyright = {\copyright{} 2023, Posted by Cold Spring Harbor Laboratory. The copyright holder for this pre-print is the author. All rights reserved. The material may not be redistributed, re-used or adapted without the author's permission.},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/XM9K825D/Frick-Cheng et al. - 2023 - Altered motility in response to iron-limitation is regulated by lpdA in uropathogenic E. coli CFT073.pdf}
 }
@@ -248,7 +264,7 @@
   doi = {10.1111/ddi.13387},
   urldate = {2024-05-25},
   abstract = {Aim Ocean warming and marine heatwaves have emerged as strong predictors of biodiversity change in coastal systems. Here, we test for systematic change in tidepool fish communities between recent and historical data sets, which include the North Pacific marine heatwave of 2014--2016. Location Periodic sampling occurred since 1966 at study site isolated from human activities on the Pacific west coast of Vancouver Island, Canada. Methods Repeated fish sampling at seven wave-exposed rocky shore tidepools was conducted on 8 (historical: 1966--1993) and 5 (recent: 2012--2016) occasions during low tide using methods that capture all individuals present (including cryptic and rare species). Species were subsequently identified using standard taxonomic approaches and abundances recorded. These data comprised the basis for analyses of both community-level and species-specific responses to test for differences in the historical and recent time periods. Results We did not detect systematic increases or declines in species density, total abundance of fishes within tidepools and community similarity between historical and recent sampling events in high-intertidal pools. However, fish communities from low-shore pools decreased in the number of species present, overall abundance and community similarity. Those species lost from the lower pools were non-resident rare species typical of subtidal environments. By contrast, a warm-affinity crevice kelpfish was observed only recently. We also found that six species had higher or lower abundances between historical and recent sampling events, and one species occurred at higher vertical heights. Main conclusion Fish communities in high-intertidal pools were resilient between historical and recent sampling periods, and lacked evidence of invasion. However, some signals of community and species changes were evident in the lower shore. Overall, these communities may reach a threshold with ongoing ocean warming and continued monitoring is required to reveal any major changes as they unfold.},
-  copyright = {{\copyright} 2021 The Authors. Diversity and Distributions published by John Wiley \& Sons Ltd.},
+  copyright = {\copyright{} 2021 The Authors. Diversity and Distributions published by John Wiley \& Sons Ltd.},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/WA48W4MB/Green et al. - 2021 - Signals of resilience and change in tidepool fish .pdf;/Users/jinko/Zotero/storage/B9XE9GSW/ddi.html}
 }
@@ -270,6 +286,24 @@
   pmcid = {PMC4933457},
   pmid = {27129225},
   file = {/Users/jinko/Zotero/storage/2WNFSRX2/Gunn et al. - 2016 - What's on the Outside Matters The Role of the Ext.pdf}
+}
+
+@article{guptaInternationalClinicalPractice2011,
+  title = {International {{Clinical Practice Guidelines}} for the {{Treatment}} of {{Acute Uncomplicated Cystitis}} and {{Pyelonephritis}} in {{Women}}: {{A}} 2010 {{Update}} by the {{Infectious Diseases Society}} of {{America}} and the {{European Society}} for {{Microbiology}} and {{Infectious Diseases}}},
+  shorttitle = {International {{Clinical Practice Guidelines}} for the {{Treatment}} of {{Acute Uncomplicated Cystitis}} and {{Pyelonephritis}} in {{Women}}},
+  author = {Gupta, Kalpana and Hooton, Thomas M. and Naber, Kurt G. and Wullt, Bj{\"o}rn and Colgan, Richard and Miller, Loren G. and Moran, Gregory J. and Nicolle, Lindsay E. and Raz, Raul and Schaeffer, Anthony J. and Soper, David E.},
+  year = 2011,
+  month = mar,
+  journal = {Clinical Infectious Diseases},
+  volume = {52},
+  number = {5},
+  pages = {e103-e120},
+  issn = {1537-6591, 1058-4838},
+  doi = {10.1093/cid/ciq257},
+  urldate = {2025-11-03},
+  abstract = {Abstract             A Panel of International Experts was convened by the Infectious Diseases Society of America (IDSA) in collaboration with the European Society for Microbiology and Infectious Diseases (ESCMID) to update the 1999 Uncomplicated Urinary Tract Infection Guidelines by the IDSA. Co-sponsoring organizations include the American Congress of Obstetricians and Gynecologists, American Urological Association, Association of Medical Microbiology and Infectious Diseases--Canada, and the Society for Academic Emergency Medicine. The focus of this work is treatment of women with acute uncomplicated cystitis and pyelonephritis, diagnoses limited in these guidelines to premenopausal, non-pregnant women with no known urological abnormalities or co-morbidities. The issues of in vitro resistance prevalence and the ecological adverse effects of antimicrobial therapy (collateral damage) were considered as important factors in making optimal treatment choices and thus are reflected in the rankings of recommendations.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/MZWE5WB6/Gupta et al. - 2011 - International Clinical Practice Guidelines for the Treatment of Acute Uncomplicated Cystitis and Pye.pdf}
 }
 
 @book{hallGuytonHallTextbook2011,
@@ -327,7 +361,7 @@
   doi = {10.1101/2025.01.04.631324},
   urldate = {2025-02-10},
   abstract = {Many bacteria use flagella to swim individually through bulk liquid, or swarm collectively over a semi-solid surface. In E. coli, c-di-GMP inhibits swimming via the effector protein YcgR. We show in this study that contrary to its effect on swimming, a certain threshold level of c-di-GMP is required for swarming. Gene expression profiles first indicated that several c-di-GMP synthases -- dgcJ, dgcM, dgcO - were upregulated during swarming. Of these, we found DgcO to play a critical role. DgcO is reported to affect PGA (poly-{$\beta$}-1,6-N-acetylglucosamine) synthesis in E. coli. We show that DgcO also promotes production of colanic acid - one of the three major exopolysaccharides in E. coli, and that colanic acid has hitherto-unknown surfactant properties that are expected to aid swarming. Importance It is well-established that in bacteria, c-di-GMP inhibits flagella-driven motility at various points in the pathway. Concomitantly, elevated c-di-GMP levels induce the expression and synthesis of a variety of exopolysaccharides that enmesh the bacteria in a biofilm, thereby also interfering with flagella function. This study reports the surprising finding that in E. coli, the exopolysaccharide colanic acid is required to enable surface navigation and that the diguanylate cyclase DgcO is employed for this purpose. For surface navigation, there appears to be a sweet spot where c-di-GMP levels are just right to produce polysaccharides that can serve as surfactants and wetting agents rather than promote formation of biofilms.},
-  copyright = {{\copyright} 2025, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NoDerivs 4.0 International), CC BY-ND 4.0, as described at http://creativecommons.org/licenses/by-nd/4.0/},
+  copyright = {\copyright{} 2025, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NoDerivs 4.0 International), CC BY-ND 4.0, as described at http://creativecommons.org/licenses/by-nd/4.0/},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/N88DARIE/Hwang et al. - 2025 - C-di-GMP is Required for Swarming in E. coli a Role for DgcO and Colanic Acid.pdf}
 }
@@ -499,7 +533,7 @@
   publisher = {American Society for Microbiology},
   doi = {10.1128/msystems.00064-16},
   urldate = {2025-07-21},
-  abstract = {Bacterial motility is thought to play an important role in virulence. We have previously shown that proficient bacterial swimming and swarming in vitro is correlated with the persistent intramammary infection phenotype observed in cattle. However, little is known about the gene regulation differences important for different motility phenotypes in Escherichia coli. In this work, three E. coli strains that cause persistent bovine mastitis infections were grown in three media that promote different types of motility (planktonic, swimming, and swarming). Using whole-transcriptome RNA sequencing, we identified a total of 935 genes ({\textasciitilde}21\% of the total genome) that were differentially expressed in comparisons of the various motility-promoting conditions. We found that approximately 7\% of the differentially expressed genes were associated with iron regulation. We show that motility assays using iron or iron chelators confirmed the importance of iron regulation to the observed motility phenotypes. Because of the observation that E. coli strains that cause persistent infections are more motile, we contend that better understanding of the genes that are differentially expressed due to the type of motility will yield important information about how bacteria can become established within a host. Elucidating the mechanisms that regulate bacterial motility may provide new approaches in the development of intervention strategies as well as facilitate the discovery of novel diagnostics and therapeutics.IMPORTANCE Bacteria can exhibit various types of motility. It is known that different types of motilities can be associated with virulence. In this work, we compare gene expression levels in bacteria that were grown under conditions that promoted three different types of E. coli motility. Better understanding of the mechanisms of how bacteria can cause an infection is an important first step to better diagnostics and therapeutics.},
+  abstract = {Bacterial motility is thought to play an important role in virulence. We have previously shown that proficient bacterial swimming and swarming in vitro is correlated with the persistent intramammary infection phenotype observed in cattle. However, little is known about the gene regulation differences important for different motility phenotypes in Escherichia coli. In this work, three E. coli strains that cause persistent bovine mastitis infections were grown in three media that promote different types of motility (planktonic, swimming, and swarming). Using whole-transcriptome RNA sequencing, we identified a total of 935 genes (\textasciitilde 21\% of the total genome) that were differentially expressed in comparisons of the various motility-promoting conditions. We found that approximately 7\% of the differentially expressed genes were associated with iron regulation. We show that motility assays using iron or iron chelators confirmed the importance of iron regulation to the observed motility phenotypes. Because of the observation that E. coli strains that cause persistent infections are more motile, we contend that better understanding of the genes that are differentially expressed due to the type of motility will yield important information about how bacteria can become established within a host. Elucidating the mechanisms that regulate bacterial motility may provide new approaches in the development of intervention strategies as well as facilitate the discovery of novel diagnostics and therapeutics.IMPORTANCE Bacteria can exhibit various types of motility. It is known that different types of motilities can be associated with virulence. In this work, we compare gene expression levels in bacteria that were grown under conditions that promoted three different types of E. coli motility. Better understanding of the mechanisms of how bacteria can cause an infection is an important first step to better diagnostics and therapeutics.},
   file = {/Users/jinko/Zotero/storage/MZQZIRES/Lippolis et al. - 2016 - Differential Gene Expression of Three Mastitis-Causing Escherichia coli Strains Grown under Plankton.pdf}
 }
 
