deleted substack notes

--- a/references.bib
+++ b/references.bib
@@ -335,6 +335,33 @@
   file = {/Users/jinko/Zotero/storage/GQDCG2WY/Hidalgo et al. - 2011 - Inhibition of Escherichia coli CFT073 fliC Expression and Motility by Cranberry Materials.pdf}
 }
 
+@book{hooksFeministTheoryMargin2000,
+  title = {Feminist {{Theory}}: {{From Margin}} to {{Center}}},
+  shorttitle = {Feminist {{Theory}}},
+  author = {Hooks, Bell},
+  year = 2000,
+  publisher = {Pluto Press},
+  abstract = {'[An] intelligently critical, inclusive, personal and very accessible feminist polemic... A very good book, promoting a feminism which includes women of all classes and colours, and which does not exclude men either. The experience of ordinary people, rather than largely white female academics, is at its heart. Still very relevant, and recommended.' Theory.orgFeminist Theory established bell hooks as one of international feminism's most challenging and influential voices. This edition includes a new preface by the author, reflecting on the book's impact and the development of her ideas since it was first published. In this beautifully written and carefully argued work, hooks maintains that mainstream feminism's reliance on white, middle-class, and professional spokeswomen obscures the involvement, leadership, and centrality of women of colour and poor women in the movement for women's liberation. Hooks argues that feminism's goal of seeking credibility and acceptance on already existing ground - rather than demanding the lasting and more fundamental transformation of society - has shortchanged the movement.A sweeping examination of the core issues of sexual politics, Feminist Theory argues that contemporary feminists must acknowledge the full complexity and diversity of women's experience to create a mass movement to end women's oppression.},
+  googlebooks = {uvIQbop4cdsC},
+  isbn = {978-0-7453-1663-5},
+  langid = {english},
+  keywords = {Political Science / Political Ideologies / Democracy,Social Science / Feminism & Feminist Theory,Social Science / Sociology / General}
+}
+
+@book{hooksFeministTheoryMargin2015,
+  title = {Feminist Theory: From Margin to Center},
+  shorttitle = {Feminist Theory},
+  author = {Hooks, Bell},
+  year = 2015,
+  publisher = {Routledge, Taylor \& Francis Group},
+  address = {New York London},
+  doi = {10.4324/9781315743172},
+  abstract = {1. Black women : shaping feminist theory -- 2. Feminism : a movement to end sexist oppression -- 3. The significance of feminist movement -- 4. Sisterhood : political solidarity among women -- 5. Men : comrades in struggle -- 6. Changing perspectives on power -- 7. Rethinking the nature of work -- 8. Educating women : a feminist agenda -- 9. Feminist movement to end violence -- 10. Revolutionary parenting -- 11. Ending female sexual oppression -- 12. Feminist revolution : development through struggle},
+  isbn = {978-1-317-58832-0 978-1-315-74317-2 978-1-317-58833-7},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/UDXLZXX8/Hooks - 2015 - Feminist theory from margin to center.epub}
+}
+
 @article{hubalekProtectantsUsedCryopreservation2003,
   title = {Protectants Used in the Cryopreservation of Microorganisms},
   author = {Hub{\'a}lek, Zdenek},
