edited the ASM piece

--- a/research/asm2025.qmd
+++ b/research/asm2025.qmd
@@ -18,4 +18,6 @@ But back to ASM 2025, the main subject of this post, which took place five month
 
 It is most definitely true—without exception, or any further consideration—that I know absolutely nothing in comparison to the majority of people that attended the conference. The sheer amount of knowledge some of them possessed astonished me. We had a few people visit our poster, including some who had been part of Dr. Yep’s lab during her fellowship days, who asked the most pointed questions, as if they had been part of the project all along. I recognize the level of devotion, curiosity, and gratification it takes to know so much about a single subject. It amazed me to imagine an entire conference full of people like this. Naturally, I found it difficult to ask the questions I was harboring, afraid I’d be condemned over my ignorance.
 
+I guess what I'm trying to say is this: imagine being the only person in the world who possesses a particular piece of knowledge—something you yourself discovered. You’d be the sole expert in that niche. To be number one in something so hyperspecific, with everyone flocking to you for your insight, is absolutely insane to me.
+
 I’m not the brightest (I'm at the very least, bright enough to know that), and places like this make you realize that. I’m not planning on a career in academia, but I suspect I’ll run into people like this wherever I go. I admire that quality, and seeing people like that encourages me to obsess more over the pursuit of knowledge, even though I’m still very far from it. And I suppose the prospect of possessing vast amounts of knowledge gives me a nice feeling.
