--- a/references.bib
+++ b/references.bib
@@ -117,6 +117,23 @@
   file = {/Users/jinko/Zotero/storage/LIEQXEXL/D. et al. - 2001 - New method for exopolysaccharide determination in culture broth using stirred ultrafiltration cells.pdf}
 }
 
+@article{dyckLecanemabEarlyAlzheimers2023,
+  title = {Lecanemab in {{Early Alzheimer}}'s {{Disease}}},
+  author = {van Dyck, Christopher H. and Swanson, Chad J. and Aisen, Paul and Bateman, Randall J. and Chen, Christopher and Gee, Michelle and Kanekiyo, Michio and Li, David and Reyderman, Larisa and Cohen, Sharon and Froelich, Lutz and Katayama, Sadao and Sabbagh, Marwan and Vellas, Bruno and Watson, David and Dhadda, Shobha and Irizarry, Michael and Kramer, Lynn D. and Iwatsubo, Takeshi},
+  year = 2023,
+  month = jan,
+  journal = {New England Journal of Medicine},
+  volume = {388},
+  number = {1},
+  pages = {9--21},
+  publisher = {Massachusetts Medical Society},
+  issn = {0028-4793},
+  doi = {10.1056/NEJMoa2212948},
+  urldate = {2025-12-19},
+  abstract = {In a phase 3 trial, participants with early Alzheimer's disease who received the monoclonal antibody lecanemab had less decline on measures of cognition and function at 18 months than those who received placebo.},
+  file = {/Users/jinko/Zotero/storage/4CC2TZTV/Dyck et al. - 2023 - Lecanemab in Early Alzheimer’s Disease.pdf}
+}
+
 @article{ezratyCommercialLysogenyBroth2014,
   title = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress: {{A}} Cautious Tale},
   shorttitle = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress},
