Interbacterial Antagonism via Secretion Systems and its Applications

--- a/references.bib
+++ b/references.bib
@@ -500,6 +500,22 @@
   file = {/Users/jinko/Zotero/storage/YN9YMXAQ/Kearns - 2010 - A field guide to bacterial swarming motility.pdf}
 }
 
+@article{kleinContactDependentInterbacterialAntagonism2020,
+  title = {Contact-{{Dependent Interbacterial Antagonism Mediated}} by {{Protein Secretion Machines}}},
+  author = {Klein, Timothy A. and Ahmad, Shehryar and Whitney, John C.},
+  year = 2020,
+  month = may,
+  journal = {Trends in Microbiology},
+  volume = {28},
+  number = {5},
+  pages = {387--400},
+  issn = {0966842X},
+  doi = {10.1016/j.tim.2020.01.003},
+  urldate = {2025-12-19},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/NBJ5NKIA/Klein et al. - 2020 - Contact-Dependent Interbacterial Antagonism Mediated by Protein Secretion Machines.pdf}
+}
+
 @article{kobayashiNovelMacrolideSpecificABCType2001,
   title = {Novel {{Macrolide-Specific ABC-Type Efflux Transporter}} in {{Escherichia}} Coli},
   author = {Kobayashi, Nobuyoshi and Nishino, Kunihiko and Yamaguchi, Akihito},
@@ -938,6 +954,25 @@
   file = {/Users/jinko/Zotero/storage/EQG66DPB/Genetic Analysis of Flagellar Mutants in Escherichia coli.pdf;/Users/jinko/Zotero/storage/KT9FGN7G/jb.113.1.105-113.html}
 }
 
+@article{tingTargetedDepletionBacteria2020,
+  title = {Targeted {{Depletion}} of {{Bacteria}} from {{Mixed Populations}} by {{Programmable Adhesion}} with {{Antagonistic Competitor Cells}}},
+  author = {Ting, See-Yeun and {Mart{\'i}nez-Garc{\'i}a}, Esteban and Huang, Shuo and Bertolli, Savannah K. and Kelly, Katherine A. and Cutler, Kevin J. and Su, Elizabeth D. and Zhi, Hui and Tang, Qing and Radey, Matthew C. and Raffatellu, Manuela and Peterson, S. Brook and de Lorenzo, V{\'i}ctor and Mougous, Joseph D.},
+  year = 2020,
+  month = aug,
+  journal = {Cell Host \& Microbe},
+  volume = {28},
+  number = {2},
+  pages = {313-321.e6},
+  publisher = {Elsevier},
+  issn = {1931-3128, 1934-6069},
+  doi = {10.1016/j.chom.2020.05.006},
+  urldate = {2025-12-19},
+  langid = {english},
+  pmid = {32470328},
+  keywords = {community,interbacterial,microbiome,phage,probiotic},
+  file = {/Users/jinko/Zotero/storage/9FR5J2QI/Ting et al. - 2020 - Targeted Depletion of Bacteria from Mixed Populations by Programmable Adhesion with Antagonistic Com.pdf}
+}
+
 @article{torresTonBDependentSystemsUropathogenic2001,
   title = {{{TonB-Dependent Systems}} of {{Uropathogenic}} {{{\emph{Escherichia}}}}{\emph{ Coli}} : {{Aerobactin}} and {{Heme Transport}} and {{TonB Are Required}} for {{Virulence}} in the {{Mouse}}},
   shorttitle = {{{TonB-Dependent Systems}} of {{Uropathogenic}} {{{\emph{Escherichia}}}}{\emph{ Coli}}},
@@ -958,6 +993,19 @@
   file = {/Users/jinko/Desktop/Research/TonB-Dependent Systems of Uropathogenic Escherichia coli- Aerobactin and Heme Transport and TonB Are Required for Virulence in the Mouse.pdf}
 }
 
+@book{willeyPrescottsMicrobiology2020,
+  title = {Prescott's Microbiology},
+  author = {Willey, Joanne M. and Prescott, Lansing M. and Sandman, Kathleen M. and Wood, Dorothy H.},
+  year = 2020,
+  edition = {Eleventh edition},
+  publisher = {McGraw-Hill Education},
+  address = {New York, NY},
+  isbn = {978-1-260-21188-7},
+  langid = {english},
+  annotation = {OCLC: 1039422993},
+  file = {/Users/jinko/Zotero/storage/R3FZS7FS/Willey et al. - 2020 - Prescott's microbiology.pdf}
+}
+
 @article{yangSubinhibitoryConcentrationsAllicin2016,
   title = {Subinhibitory {{Concentrations}} of {{Allicin Decrease Uropathogenic Escherichia}} Coli ({{UPEC}}) {{Biofilm Formation}}, {{Adhesion Ability}}, and {{Swimming Motility}}},
   author = {Yang, Xiaolong and Sha, Kaihui and Xu, Guangya and Tian, Hanwen and Wang, Xiaoying and Chen, Shanze and Wang, Yi and Li, Jingyu and Chen, Junli and Huang, Ning},
@@ -976,6 +1024,23 @@
   langid = {english},
   keywords = {allicin,biofilm formation and dispersal,uropathogenic <i>Escherichia coli</i>},
   file = {/Users/jinko/Zotero/storage/Q9QB8YMS/Yang et al. - 2016 - Subinhibitory Concentrations of Allicin Decrease Uropathogenic Escherichia coli (UPEC) Biofilm Forma.pdf}
+}
+
+@article{yimExploitingInterbacterialAntagonism2021,
+  title = {Exploiting Interbacterial Antagonism for Microbiome Engineering},
+  author = {Yim, Sung Sun and Wang, Harris H.},
+  year = 2021,
+  month = sep,
+  journal = {Current opinion in biomedical engineering},
+  volume = {19},
+  pages = {100307},
+  issn = {2468-4511},
+  doi = {10.1016/j.cobme.2021.100307},
+  urldate = {2025-12-19},
+  abstract = {Interbacterial antagonism can significantly impact microbiome assembly and stability and can potentially be exploited to modulate microbes and microbial communities in diverse environments, ranging from natural habitats to industrial bioreactors. Here we highlight key mechanisms of interspecies antagonism that rely on direct cell-to-cell contact or diffusion of secreted biomolecules, and discuss recent advances to provide altered function and specificities for microbiome engineering. We further outline the use of ecological design principles based on antagonistic interactions for bottom-up assembly of synthetic microbial communities. Manipulating microbial communities through these negative interactions will be critical for understanding complex microbiome processes and properties and developing new applications of microbiome engineering.},
+  pmcid = {PMC10655851},
+  pmid = {37982076},
+  file = {/Users/jinko/Zotero/storage/Z9GJCZ2R/Yim and Wang - 2021 - Exploiting interbacterial antagonism for microbiome engineering.pdf}
 }
 
 @article{zhanCdiGMPSignalingModule2024,
